# bob

./: .mcp.json  BOB_AGENT_LIFECYCLE_SPEC.md  BOB_AUTONOMY_SPEC.md  Cargo.toml  README.md  bench.sh  bob.yaml  config.example.yaml  harness.sh  install.sh  opencode.json  setup.sh
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
bench-results/20260627-203919/: ollama_Intel_Qwen3-Coder-Next-int4-AutoRound.events.jsonl  results.jsonl
bench-results/20260627-203944/: 192.168.1.133_cyankiwi_gemma-4-26B-A4B-it-AWQ-4bit.events.jsonl  ollama_Intel_Qwen3-Coder-Next-int4-AutoRound.events.jsonl  results.jsonl
bench-results/20260627-204840/: 192.168.1.133_cyankiwi_gemma-4-26B-A4B-it-AWQ-4bit.events.jsonl  minimax-coding-plan_MiniMax-M3.events.jsonl  ollama_Intel_Qwen3-Coder-Next-int4-AutoRound.events.jsonl  results.jsonl  zai-coding-plan_glm-5.2.events.jsonl
commands/: build.md
docs/: campaign.example.yaml
docs/agents/: greta.md  hector.md
docs/field-reports/: 2026-06-27-hector-bob-abe-lifecycle.md  2026-06-27-megaman-clone-dogfood.md  2026-06-27-territory-wars-overlord-session.md  2026-07-05-route-live-local-loop.md
docs/superpowers/plans/: 2026-06-25-bob-builder.md  2026-07-03-bob-trust-layer-fixes.md
docs/superpowers/specs/: 2026-06-25-bob-builder-design.md
skills/delegating-to-bob/: SKILL.md
src/: builder.rs  campaign.rs  cli.rs  config.rs  doctor.rs  engine.rs  init.rs  judge.rs  main.rs  mcp.rs  model_stats.rs  report.rs  safety.rs  scope.rs  verify.rs  worktree.rs
tests/: integration_build.rs  scenarios.sh
