[package]
name = "bob"
version = "0.4.0"
edition = "2021"
description = "Autonomous build-verify-judge loop over opencode + abe"
license = "Apache-2.0"

[[bin]]
name = "bob"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
schemars = "0.8"
libc = "0.2"

[profile.release]
strip = true
